Fix: fixed some layout and spacing

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: black;
+    background-color: #000000;
     font-family: sans-serif;
     display: grid;
     height: 100%;
@@ -9,24 +9,27 @@ body {
 }
 
 .nav {
-    border: 1px solid #585a5e;
-    width: 60dvw;
+    border: 1.3px solid #585a5e;
+    width: 50dvw;
     margin: 10% auto;
-    border-radius: 2rem;
+    border-radius: 2.2rem;
 }
 
 .menu {
+    border-radius: 2.2rem;
+    background-color: #080e1d;
     color: gray;
     list-style: none;
     margin: 0;
-    padding: 0;
     display: flex;
     justify-content: end;
-    padding: 0 1rem;
+    padding: 0 3rem;
+    gap: 10px;
 }
 
 .item {
     position: relative;
+    padding: 20px, 20px;
 }
 
 @keyframes bounceIn {
@@ -35,17 +38,11 @@ body {
         translate: 0 30px;
     }
     40% {
-        scale: 1.2;
+        scale: 1.4;
         translate: 0 0;
     }
-    60% {
-        scale: 0.95;
-    }
-    80% {
-        scale: 1.05;
-    }
     100% {
-        scale: 1;
+        scale: 1.3;
         translate: 0 0;
     }
 }
@@ -56,18 +53,12 @@ body {
         translate: 0 0;
     }
     40% {
-        scale: 0.9;
+        scale: 1.4;
         translate: 0 30px;
-    }
-    60% {
-        scale: 1.02;
-    }
-    80% {
-        scale: 0.98;
     }
     100% {
-        scale: 1;
-        translate: 0 30px;
+        scale: 1.3;
+        translate: 0 32px;
     }
 }
 
@@ -103,7 +94,7 @@ body {
     color: inherit;
     text-decoration: none;
     display: block;
-    padding: 2rem 1.5rem;
+    padding: 3.5rem 3rem;
 }
 
 .link:focus-visible {
@@ -118,6 +109,6 @@ body {
 
 .content {
     background-color: white;
-    border-radius: 2rem;
-    height: 300px;
+    border-radius: 2.2rem;
+    height: 400px;
 }
